tests/ui/expected-name-value.stderr
error: invalid #[opt] attribute
 --> $DIR/expected-name-value.rs:5:5
  |
5 |     #[opt('a')]
  |     ^
